syntax = "proto3";

package coordinator.v1;

// option go_package = "coordinator/v1";

// TaskStatus represents the possible statuses of a task.
enum TaskStatus {
  TASKSTATUS_UNSPECIFIED = 0; // Default value; the status is unspecified.
  TASKSTATUS_QUEUED      = 1; // The task has been queued and is waiting to be processed.
  TASKSTATUS_STARTED     = 2; // The task has started processing.
  TASKSTATUS_COMPLETE    = 3; // The task has been completed successfully.
  TASKSTATUS_FAILED      = 4; // The task has failed during processing.
}

// CoordinatorService defines the methods for interacting with the coordinator service.
// It includes methods for submitting tasks to workers, updating task statuses,
// and sending heartbeat messages.
service CoordinatorService {
  // Sends a task to the worker and returns the task's response.
  rpc SubmitTask (SubmitTaskRequest) returns (SubmitTaskResponse) {}

  // Updates the status of a task with a new status and time stamps.
  rpc UpdateTaskStatus (UpdateTaskStatusRequest) returns (UpdateTaskStatusResponse) {}

  // SendHeartbeat is called by the worker to inform the coordinator that it is still alive.
  // Workers must send heartbeats at regular intervals to avoid being marked as inactive
  // and removed from the worker pool. This is called FROM the worker TO the coordinator.
  rpc SendHeartbeat (SendHeartbeatRequest) returns (SendHeartbeatResponse);
}

// SubmitTaskRequest represents a request for submitting a task, containing the task's payload data.
message SubmitTaskRequest {
  string payload = 1; // Data associated with the task to be processed.
}

// SubmitTaskResponse represents the response to a task submission, including the task ID,
// a message with additional information, and a success flag indicating if the task
// was successfully processed.
message SubmitTaskResponse {
  string task_id = 1; // Unique identifier for the task.
  string message = 2; // Message providing additional information about the task.
}

// UpdateTaskStatusRequest represents a request to update the status of a task, including
// the task ID, the new status, and the timestamps for when the task started, completed,
// or failed.
message UpdateTaskStatusRequest {
  string     task_id      = 1; // Unique identifier for the task.
  TaskStatus status       = 2; // The new status of the task.
  int64      started_at   = 3; // Timestamp of when the task started (optional).
  int64      completed_at = 4; // Timestamp of when the task was completed (optional).
  int64      failed_at    = 5; // Timestamp of when the task failed (optional).
}

// UpdateTaskStatusResponse represents the response to a task status update request.
// It includes a success flag indicating whether the update was successful.
message UpdateTaskStatusResponse {
  bool success = 1; // Flag indicating whether the task status update was successful.
}

// SendHeartbeatRequest is sent by the worker to the coordinator to signal it is alive and active.
// Regular heartbeats prevent the coordinator from marking the worker as inactive.
message SendHeartbeatRequest {
  // worker_id is the unique identifier assigned to this worker by the coordinator during registration.
  uint32 worker_id = 1;

  // address is the network address where this worker can be reached (e.g., "localhost:50052").
  // This allows the coordinator to route tasks to the correct worker.
  string address = 2;
}

// SendHeartbeatResponse is the coordinator's acknowledgment of the worker's heartbeat.
message SendHeartbeatResponse {
  // ack confirms that the coordinator received and processed the heartbeat.
  // Flag indicating whether the heartbeat was acknowledged.
  bool ack = 1;
}